--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "airbnb-be",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cloudinary": "^1.23.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -19,6 +20,7 @@
     "fs": "0.0.1-security",
     "fs-extra": "^9.0.1",
     "multer": "^1.4.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "node-geocoder": "^3.27.0",
     "nodemon": "^2.0.6",
     "path": "^0.12.7",
