--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-validator": "^6.9.0",
     "fs": "0.0.1-security",
     "fs-extra": "^9.0.1",
+    "klaw": "^3.0.0",
     "multer": "^1.4.2",
     "multer-storage-cloudinary": "^4.0.0",
     "node-geocoder": "^3.27.0",
