--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.4.0",
     "cloudinary": "^1.23.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -19,7 +20,6 @@
     "express-validator": "^6.9.0",
     "fs": "0.0.1-security",
     "fs-extra": "^9.0.1",
-    "klaw": "^3.0.0",
     "multer": "^1.4.2",
     "multer-storage-cloudinary": "^4.0.0",
     "node-geocoder": "^3.27.0",
