--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "node-geocoder": "^3.27.0",
     "nodemon": "^2.0.6",
     "path": "^0.12.7",
+    "pg": "^8.5.1",
+    "sequelize": "^6.5.0",
     "serve": "^11.3.2",
     "stream": "0.0.2",
     "uniqid": "^5.2.0"
