--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "express-validator": "^6.9.0",
     "fs": "0.0.1-security",
     "fs-extra": "^9.0.1",
+    "html-pdf-node": "^1.0.7",
+    "moment": "^2.29.1",
     "multer": "^1.4.2",
     "multer-storage-cloudinary": "^4.0.0",
     "node-geocoder": "^3.27.0",
