--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@sendgrid/mail": "^7.4.0",
     "atob": "^2.1.2",
     "bcrypt": "^5.0.0",
+    "bcryptjs": "^2.4.3",
     "cloudinary": "^1.23.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
