--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "fs": "0.0.1-security",
     "fs-extra": "^9.0.1",
     "html-pdf-node": "^1.0.7",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "multer": "^1.4.2",
     "multer-storage-cloudinary": "^4.0.0",
