--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "multer-storage-cloudinary": "^4.0.0",
     "node-geocoder": "^3.27.0",
     "nodemon": "^2.0.6",
+    "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
     "path": "^0.12.7",
     "pg": "^8.5.1",
     "sequelize": "^6.5.0",
